css/about.css
html, body { width: 100%; height: 100%;
    font-family: 'Fjalla One', sans-serif;
}

nav {
    background-color:#D00D2D;
    color: white;
    padding-bottom:65px;
}

hr {
    height: 3px;
    background-color: #D00D2D;
    max-width: 100%;
}

.logo{
    font-size: 1.2em;
    font-weight: 800;
}

.navbar-inverse .navbar-nav .nav-link {
    color: white;
    font-family: 'Fjalla One', sans-serif;
    font-weight: 700;
    font-size: 1.1em;
}

.navbar-brand .img-responsive2{
    max-height: 45px;
    max-width: 50%;
    overflow: visible;
    padding-top: 0;
    padding-bottom: 0;
    padding-right: 10px;
}

.navbar-nav > li{
    padding-left:1.5em;
    padding-right:1.5em;
}

#heading-1 { padding-top: 3em; }

#about p { font-size: 1.2em; }

#contact p{ font-size: 1.2em;}

.card {
    /* need min/max because flexbox */
    min-width: 310px;
    max-width: 310px;
    height: 160px;
    float: none;
    margin: 0 auto 10px;
}

.card-img {
    object-fit: cover;
    object-position: center;
    width: 100px;
    max-height: 100px;
}

.card-footer { height: 50px; }

footer{
    background: #000000;
    color: #D00D2D;
    font-family: "Poppins", sans-serif;
    font-weight: 700;
    padding-top: 2em;
}

.follow-us{
    font-size: 4em;
    color: #D00D2D;
}

.follow-us a{
    color:#D00D2D;
    text-align: center;
}

.follow-us h1{
    font-weight: 700;
    font-size: 0.5em;
    font-family: Poppins, serif
}

.footer-text p{
    font-size: 0.8em;
    letter-spacing: 4px;
}

@media (max-width: 978px) {
    hr { max-width: 100%; }

    .footer h1{ font-size: 1.75em; }

    .follow-us{ font-size: 3em; }
}

@media (max-width: 568px) {

}

